<resources>
    <string name="app_name">Traverse Companion</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_application_menu">Application Menu</string>
    <string name="str_clients">Clients</string>
    <string name="str_approval">Approval</string>
    <string name="str_call_list">Call List</string>
    <string name="str_complaints">Complaints</string>
    <string name="str_refund">Refund</string>
    <string name="str_team">Team</string>
    <string name="str_masters">Masters</string>
    <string name="str_countries">Countries</string>
    <string name="str_source">Source</string>
    <string name="str_drivers">Drivers</string>
    <string name="str_lettings">Lettings</string>
    <string name="str_universities">Universities</string>
    <string name="str_campuses">Campuses</string>
    <string name="str_advanced_search">Advanced Search</string>
    <string name="str_lettings_search">Lettings Search</string>
    <string name="str_driver_search">Driver Search</string>
    <string name="str_system_settings">System Settings</string>
    <string name="str_contents">Contents</string>
    <string name="str_user_groups">User Groups</string>
    <string name="str_source_category">Source Category</string>
    <string name="str_country_data">Country Data</string>
    <string name="str_airports">Airports</string>
    <string name="str_data_section">Data Section</string>
    <string name="str_amenities">Amenities</string>
    <string name="str_additional_cost">Additional Cost</string>
    <string name="str_email_configuration">Email Configuration</string>
    <string name="str_activity_log">Activity Log</string>
    <string name="universities">Universities</string>
    <string name="campuses">Campuses</string>
    <string name="intakes">Intakes</string>
    <string name="enquiries">Enquiries</string>
    <string name="month_year"><![CDATA[Month & Year]]></string>
    <string name="client_reference">Client Reference</string>
    <string name="created_on">Created On</string>
    <string name="client_name">Client Name</string>
    <string name="client_type">Client Type</string>
    <string name="stage">Stage</string>
    <string name="next_followup_date">Next Followup Date</string>
    <string name="attended_by">Attended By</string>
    <string name="client_status">Client Status</string>
    <string name="sts_open">Open</string>
    <string name="sts_pending">Pending</string>
    <string name="sts_in_progress">In Progress</string>
    <string name="sts_rejected">Rejected</string>
    <string name="sts_closed">Closed</string>
    <string name="sts_cancelled_advance">Cancelled-Advance</string>
    <string name="sts_cancelled_full_pay">Cancelled- Full Payment</string>
    <string name="filter">Filter</string>
    <string name="university">University</string>
    <string name="country">Country</string>
    <string name="staff">Staff</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="client_basic_info">Client Basic Info</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="passenger_type">Passenger Type</string>
    <string name="edit_info">Edit Info</string>
    <string name="log_history">Log History</string>
    <string name="system_data_info">System Data Info</string>
    <string name="lead_head">Lead Head</string>
    <string name="database_name">Database Name</string>
    <string name="client_stage">Client Stage</string>
    <string name="edit">Edit</string>
    <string name="followup_date">Followup Date</string>
    <string name="select_country">Select Country</string>
    <string name="update_country">Update Country</string>
    <string name="cancel">Cancel</string>
    <string name="update">update</string>
    <string name="select_section">Select Section</string>
    <string name="intake_sections">Intake Sections</string>
    <string name="select_client_type">Select Client Type</string>
    <string name="given_name">Given Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="contact">Contact</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="phone_parent">Phone (parent)</string>
    <string name="abroad_contact">Abroad Contact</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="parent_contact_number">Parent Contact Number</string>
    <string name="abroad_contact_number">Abroad Contact Number</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city_state">City / State</string>
    <string name="pincode">PinCode</string>
    <string name="outbound_travel">Outbound Travel</string>
    <string name="ticket_status">Ticket Status</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="airport">Airport</string>
    <string name="terminal">Terminal</string>
    <string name="arrival">Arrival</string>
    <string name="flight_ticket_status">Flight Ticket Status</string>
    <string name="departure_time">Departure Time</string>
    <string name="select_arrival_airport">Select Arrival Airport</string>
    <string name="select_arrival_terminal">Select Arrival Terminal</string>
    <string name="arrival_time">Arrival Time</string>
</resources>