<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cvRoot"
            android:layout_alignEnd="@+id/cvRoot"
            android:layout_alignBottom="@+id/cvRoot"
            android:layout_marginStart="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_4sdp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:elevation="@dimen/_1sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_5sdp">

                    <TextView
                        style="@style/medium_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/client_reference"
                        android:textSize="@dimen/_8sdp" />


                    <TextView
                        style="@style/medium_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/created_on"
                        android:textSize="@dimen/_8sdp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tvClientReference"
                        style="@style/big_text_bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp" />


                    <TextView
                        android:id="@+id/tvCreatedOn"
                        style="@style/big_text_bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

                <TextView
                    style="@style/medium_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:text="@string/client_name"
                    android:textSize="@dimen/_8sdp" />

                <TextView
                    android:id="@+id/tvClientName"
                    style="@style/big_text_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/app_name"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:id="@+id/lnrDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#D5F8F8F8"
                    android:visibility="gone"
                    android:paddingVertical="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/medium_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/client_type"
                            android:textSize="@dimen/_8sdp" />


                        <TextView
                            style="@style/medium_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/stage"
                            android:textSize="@dimen/_8sdp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvClientType"
                            style="@style/big_text_bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="-"
                            android:textSize="@dimen/_10sdp" />


                        <TextView
                            android:id="@+id/tvClientStage"
                            style="@style/big_text_bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="-"
                            android:gravity="end"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/medium_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/next_followup_date"
                            android:textSize="@dimen/_8sdp" />


                        <TextView
                            style="@style/medium_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/attended_by"
                            android:textSize="@dimen/_8sdp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvNFD"
                            style="@style/big_text_bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="-"
                            android:textSize="@dimen/_10sdp" />


                        <TextView
                            android:id="@+id/tvStaffName"
                            style="@style/big_text_bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="-"
                            android:gravity="end"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/medium_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/client_status"
                            android:textSize="@dimen/_8sdp" />





                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvClientStatus"
                            style="@style/big_text_bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/_10sdp" />


                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/cvViewClient"
                                android:layout_width="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_height="@dimen/_20sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                app:cardElevation="0dp"
                                app:strokeWidth=".5dp"
                                app:strokeColor="@color/colorPrimary"
                                app:cardBackgroundColor="@android:color/transparent"
                                app:cardCornerRadius="@dimen/_3sdp" >
                                <RelativeLayout
                                    android:layout_width="wrap_content"

                                    android:layout_height="@dimen/_20sdp">
                                    <TextView
                                       android:layout_centerInParent="true"
                                        style="@style/big_text_bold"
                                        android:paddingHorizontal="@dimen/_5sdp"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="View Client Details"
                                        android:textSize="@dimen/_8sdp" />

                                </RelativeLayout>
                            </com.google.android.material.card.MaterialCardView>
                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</layout>