<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardBackgroundColor="#f0f0f0"
            app:cardCornerRadius="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/ct_image" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:elevation="@dimen/_1sdp"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="@dimen/_2sdp"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/_1sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:id="@+id/etUsername"
                            android:hint="@string/str_username"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="25"
                            style="@style/medium_text"
                            android:maxLines="1"
                            android:paddingHorizontal="@dimen/_5sdp" />


                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:elevation="@dimen/_1sdp"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="@dimen/_2sdp"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/_1sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/str_password"
                            android:imeOptions="actionNone"
                            android:inputType="textPassword"
                            android:maxLength="25"
                            android:id="@+id/etPassword"
                            style="@style/medium_text"
                            android:maxLines="1"
                            android:paddingHorizontal="@dimen/_5sdp" />


                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/str_login"
                    style="@style/medium_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:cornerRadius="@dimen/_5sdp" />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>
</layout>